--- a/Osiris TFS Monitor Models/TfsMonitor.Domain.csproj
+++ b/Osiris TFS Monitor Models/TfsMonitor.Domain.csproj
@@ -170,6 +170,11 @@
     <Compile Include="IterationCollection.cs" />
     <Compile Include="IterationWiCollection.cs" />
     <Compile Include="Monitor.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="SlideElements\Twitter.cs" />
     <Compile Include="SlideElements\TaskManager.cs" />
     <Compile Include="Position.cs" />
@@ -216,6 +221,8 @@
     <Compile Include="TfsWorkItemFilter\TfsWiStateFilter.cs" />
     <Compile Include="TfsWorkItemFilter\TfsWiTypeFilter.cs" />
     <Compile Include="TfsWorkItemFilter\TfsWorkItemFilter.cs" />
+    <Compile Include="Utilities\BuildUtility.cs" />
+    <Compile Include="Utilities\HashSetHelper.cs" />
     <Compile Include="WiStateCollection.cs" />
     <Compile Include="WorkItemCollectionEx.cs" />
     <Compile Include="WorkItemTime.cs" />
@@ -247,7 +254,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
