--- a/Osiris TFS Monitor/app.config
+++ b/Osiris TFS Monitor/app.config
@@ -6,6 +6,7 @@
         </sectionGroup>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Osiris.Tfs.Monitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+            <section name="Osiris.Tfs.Monitor.Models.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
@@ -42,6 +43,18 @@
             </setting>
         </Osiris.Tfs.Monitor.Properties.Settings>
     </userSettings>
+  <applicationSettings>
+    <Osiris.Tfs.Monitor.Properties.Settings>
+      <setting name="OsirisTFSMonitor_OsirisExceptionClient_Service" serializeAs="String">
+        <value>http://exceptions.osiris.no/Service.asmx</value>
+      </setting>
+    </Osiris.Tfs.Monitor.Properties.Settings>
+    <Osiris.Tfs.Monitor.Models.Properties.Settings>
+      <setting name="MaxBuildsPerDefinition" serializeAs="String">
+        <value>5</value>
+      </setting>
+    </Osiris.Tfs.Monitor.Models.Properties.Settings>
+  </applicationSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
 	</startup>
@@ -49,11 +62,5 @@
   <bindings/>
   <client/>
  </system.serviceModel>
- <applicationSettings>
-  <Osiris.Tfs.Monitor.Properties.Settings>
-   <setting name="OsirisTFSMonitor_OsirisExceptionClient_Service" serializeAs="String">
-    <value>http://exceptions.osiris.no/Service.asmx</value>
-   </setting>
-  </Osiris.Tfs.Monitor.Properties.Settings>
- </applicationSettings>
+
 </configuration>
